fixing dark mode toggle and adding back into index page

--- a/client/src/pages/index.module.scss
+++ b/client/src/pages/index.module.scss
@@ -51,10 +51,12 @@ body {
   }
 
 .switch {
-  position: relative;
+  position: absolute;
   display: inline-block;
-  width: 60px;
-  height: 34px;
+  width: 30px;
+  height: 17px;
+  top: 30px;
+  right: 30px;
 }
 
 .switch input {
@@ -79,10 +81,10 @@ body {
 .slider:before {
   position: absolute;
   content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
+  height: 13px;
+  width: 13px;
+  left: 2px;
+  bottom: 2px;
   background-color: white;
   -webkit-transition: .4s;
   transition: .4s;
@@ -98,7 +100,7 @@ input:focus + .slider {
 }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
+  -webkit-transform: translateX(13px);
+  -ms-transform: translateX(13px);
+  transform: translateX(13px);
 }
